# DB_MAI

./: README.md
CP/: Dockerfile  Makefile  Readme.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
CP/planner/: admin.py  forms.py  models.py  urls.py  views.py
CP/planner/migrations/: 0001_initial.py  0002_goal_progress_role.py
CP/templates/: base.html
CP/templates/planner/: food-detail-page.html  food-page.html  main-page.html  training-detail-page.html  training-page.html
CP/templates/registration/: login.html  profile.html  registration.html
